<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DishMenu</string>
    <string name="addDish_name">Add Dish</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 	<string name="chefedDish_Title">推荐菜式</string>
 	<string name="user">用户：</string>
 	<string name="number">人数：</string>
 	<string name="seat">座位：</string>
 	<string name="totalPrice">总价：</string>
 	<string name="mydish_dishStyle">菜式</string>
 	<string name="mydish_dishName">菜名</string>
 	<string name="mydish_dishNumber">数量</string>
 	<string name="mydish_dishPrice">价格</string>
</resources>
